--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
    </div>
 
    <div class="footer-text">
-     <p>&copy; Artistas Web - 2019 | Todos los derechos reservados.</p>
+     <p>&copy; Miguel Angel - 2020 | Todos los derechos reservados.</p>
    </div>
   
   </div>
